src/test/deca/context/valid/this.deca
// Description:
//    this
//
// Resultats:
//    
//
// Historique:
//    cree le 06/01/2023

class A {
    void a (){
        this;
    }
}